Build a Fraction: Added outline to pieces and added gray cutout line for container divisions
Build a Fraction: Fixed: Split button was broken
Build a Fraction: Allow pieces to move to any container within a group
Build a Fraction: Made it so you cannot overflow a single piece
Build a Fraction: Made it so you cannot overflow a single piece
Build a Fraction: Removed "world selection screen" and merged shapes/numbers level selection screens
Build a Fraction: Put the up/down arrows beneath the container and make them adjacent
Fraction Matcher: Require the user to change their answer before pressing "check answer" again, see #3357 comment 21
Fraction Matcher: For upside-down L shapes and other representations that are still too tall after shrinking based on width, undo previous shrink and shrink by another 20%
Fraction Matcher: Show different icons for mixed fraction level selection screen
Fraction Matcher: Fixed: Reset all broken for mixed numbers tab
Fraction Matcher: Created levels for mixed numbers tab
Fraction Matcher: Disallow mixed number representations in tab 1
Fraction Matcher: Added docs to MovableFractionNode, see #3557
Fraction Matcher: Created MovableFractionID, see #3557
Fraction Matcher: Added documentation for animateMatchToScoreCell, see #3557
Fraction Matcher: Addressed some review issues, see #3557
Fraction Matcher: Added a new tab for "mixed numbers"
Fraction Matcher: Removed unused field, see #3357
# 0.00.97 (65476) Jun 27, 2012
Build a Fraction: Only show the "add container" button if there is at least one fraction > 1
Fraction Matcher: Added documentation to Vector2D class, see #3357
Fraction Matcher: Added documentation for Controller class, see #3357
Fraction Matcher: Added documentation for FNode class, see #3357
Fraction Matcher: Generalized code in StarSetNode regarding generation of stars and pieces of stars, see #3357
Fraction Matcher: Addressed a few review comments, see #3357
Converted to use colorblind friendly red, see #3357