@@ -1,3 +1,4 @@
+Fraction Matcher: Refactored StartScreen into a separate class, see #3357
 Build a Fraction: Added outline to pieces and added gray cutout line for container divisions
 Build a Fraction: Fixed: Split button was broken
 Build a Fraction: Allow pieces to move to any container within a group
